...
    ) { paddingValues ->
        TrackScrollJank(scrollableState = lazyListState, stateName = "Add/Edit Employee::Fields")

        LazyColumn(
            state = lazyListState,
            modifier = Modifier
                .testTag("addEditEmployeeFields")
                .fillMaxSize()
                .padding(paddingValues),
            contentPadding = PaddingValues(SpaceMedium),
            verticalArrangement = Arrangement.spacedBy(SpaceSmall),
        ) {
            item(EMPLOYEE_NAME_FIELD) {
...
                        errorTextTag = EMPLOYEE_POSITION_ERROR,
                    )

                    if (positions.isNotEmpty()) {
                        DropdownMenu(
                            modifier = Modifier
                                .testTag("positionList")
                                .width(with(LocalDensity.current) { textFieldSize.width.toDp() }),
                            expanded = expanded,
                            onDismissRequest = { expanded = false },
                        ) {
                            positions.forEachIndexed { index, position ->
                                DropdownMenuItem(
...
                    leadingIcon = PoposIcons.CalenderToday,
                    value = state.employeeJoinedDate.toJoinedDate,
                    onValueChange = {},
                    trailingIcon = {
                        IconButton(
                            onClick = { dialogState.show() },
                            modifier = Modifier.testTag("datePicker"),
                        ) {
                            Icon(
                                imageVector = PoposIcons.CalenderMonth,
                                contentDescription = "Choose a date",
                            )
                        }
...
                        Spacer(Modifier.width(SpaceSmall))

                        AnimatedVisibility(
                            visible = state.isDeliveryPartner,
                        ) {
                            StandardRoundedFilterChip(
                                text = if (scannedBitmap != null) "Scanned" else "Scan QR",
                                icon = PoposIcons.QrCodeScanner,
                                selected = scannedBitmap != null,
                                onClick = {
                                    onEvent(AddEditEmployeeEvent.ScanQRCode)
                                },
                            )
...
            title = CREATE_NEW_EMPLOYEE,
            icon = PoposIcons.Add,
            state = AddEditEmployeeState(
                employeePhone = "9078563421",
                employeeName = "Leopoldo Rodriguez",
                employeeSalary = "12000",
                employeePosition = "Chef",
                employeeEmail = null,
                employeeSalaryType = EmployeeSalaryType.Monthly,
                employeeType = EmployeeType.FullTime,
                isDeliveryPartner = true,
                partnerQRCode = "No QR",
            ),
...
