package com.niyaj.poposroom.features.common.utils

object Constants {
    const val SPLASH_SCREEN_DURATION = 100L

    const val PRINTER_DPI = 176

    const val PRINTER_WIDTH_MM = 58f

    const val PRINTER_NBR_LINE = 31

    const val PAYMENT_QR_DATA = "upi://pay?pa=paytmqr281005050101zry6uqipmngr@paytm&pn=Paytm%20Merchant&paytmqr=281005050101ZRY6UQIPMNGR"

    const val PRODUCT_NAME_LENGTH = 18

    const val PAID = "Paid"

    const val NOT_PAID = "Not Paid"


    const val TEXT_FIELD_LEADING_ICON = "TextFieldLeadingIcon"
    const val TEXT_FIELD_TRAILING_ICON = "TextFieldLeadingIcon"

    const val SEARCH_ITEM_NOT_FOUND = "Searched Item Not Found."
    const val SEARCH_ITEM_PLACEHOLDER = "Search for items..."

    const val STANDARD_BACK_BUTTON = "StandardBackButton"
    const val SEARCH_BAR_CLEAR_BUTTON = "SearchBarClearButton"
    const val STANDARD_SEARCH_BAR = "StandardSearchBar"
    const val FAB_TEXT = "Create New"
    const val LOADING_INDICATION = "loadingIndicator"
    const val SEARCH_ICON = "SearchIcon"
    const val SETTINGS_ICON = "SettingsIcon"
    const val EDIT_ICON = "EditIcon"
    const val DELETE_ICON = "DeleteIcon"
    const val CLEAR_ICON = "ClearIcon"
    const val SELECTALL_ICON = "SelectAllIcon"


    const val JSON_FILE_TYPE = "application/json"

    const val JSON_FILE_EXTENSION = ".json"

    const val SAVABLE_FILE_NAME = "popos"
}